# SeenKit

./: .clang-tidy  .gitignore  CMakeLists.txt  build_lib_ios.sh  build_lib_macos.sh  build_macos.sh  build_xcodeproj_ios.sh  build_xcodeproj_macos.sh  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  seen-cli.js  seen-cli.ts  tsconfig.json
cmake/: build_config.cmake
example/darwin/: BridgingHeaders.h  CMakeLists.txt  ContentView.swift  ExampleApp.swift  SeenView.swift
example/res/: CMakeLists.txt  demo.seen
example/seen/: CMakeLists.txt  demo.seen  main.ts  package.json
example/typescript/: main.ts  package.json  tsconfig.json
lib/darwin/: CMakeLists.txt
lib/darwin/include/SeenKit/: SeenBundle.h  SeenEngine.h  SeenKit.h  SeenMacros.h  SeenView.h
lib/darwin/src/: SeenBaseView+Private.h  SeenBaseView.mm  SeenEngine.mm  SeenNSView.mm  SeenRenderer.h  SeenRenderer.mm  SeenUIView.mm  SeenWeakProxy.h  SeenWeakProxy.mm  ViewMacros.h
lib/darwin/src/seen/: SeenBaseView+Private.h  SeenBaseView.mm  SeenBundle+Private.h  SeenBundle.mm  SeenEngine.mm  SeenNSView.mm  SeenView.mm  ViewMacros.h
lib/darwin/swift/: SeenProto.swift  SeenView.swift
lib/seen/: drawable.d.ts  drawable_metrics.d.ts  frame_pacer.d.ts  gpu.d.ts  gpu_adapter.d.ts  index.d.ts  object.d.ts  package.json  types.d.ts
lib/typescript/: index.d.ts
public/darwin/SeenKit/: SeenBuildConfig.h  SeenEngine.h  SeenKit.h  SeenPackage.h  SeenView.h
seen/foundation/: class_constraints.h  file_system.h  latch.h  logger.h  looper.h  platform.h
seen/foundation/darwin/: file_system.mm  logger_darwin.mm  looper.mm
seen/foundation/darwin/utils/: scoped_nsobject.h
src/: SeenEngine.mm  app.h  engine.cc  engine.h  engine_darwin.mm  package.cc  package.h  package_darwin.mm  view_darwin.mm
src/foundation/: data.cc  data.h  file_system.cc  file_system.h  latch.cc  latch.h  logger.h  looper.cc  looper.h  path.h  platform.h  promise.h  promise_any.h  promise_t.h  promise_void.h
src/foundation/darwin/: file_system.mm  logger_darwin.mm  looper.mm  path.mm
src/foundation/darwin/utils/: scoped_block.h  scoped_cfref.h  scoped_nsobject.h
src/seen/: bundle.cc  bundle.h  engine.cc  engine.h
src/seen/base/: class_ext.h  data.cc  data.h  data_channel.cc  data_channel.h  deferred_task.cc  deferred_task.h  logger.h  math.h  rect.cc  rect.h  rx_value.h  time_delta.h  time_point.h  types.h  waitable_event.cc  waitable_event.h  worker.cc  worker.h  worker_coordinator.cc  worker_coordinator.h  worker_driver.cc  worker_driver.h
src/seen/foundation/: class_constraints.h  class_ext.h  data.cc  data.h  data_channel.cc  data_channel.h  defer.cc  defer.h  file_system.cc  file_system.h  latch.cc  logger.cc  logger.h  looper.cc  looper.h  promise.h  promise_any.h  promise_void.h  std_worker.cc  std_worker.h  time_delta.h  time_point.h  waitable_event.cc  waitable_event.h  worker.cc  worker.h  worker_driver.cc  worker_driver.h  worker_std.cc  worker_std.h
src/seen/foundation/darwin/: logger.cc  logger.h  logger_darwin.mm  looper_darwin.mm  platform_worker.h  platform_worker.mm  scoped_block.h  scoped_cfref.h  scoped_nsobject.h  worker.h  worker.mm
src/seen/foundation/darwin/utils/: scoped_cfref.h
src/seen/framework/: scene.h
src/seen/framework/common/: engine.h
src/seen/framework/g2d/app/: application.cc  application.h
src/seen/framework/g2d/constants/: constants.h
src/seen/framework/g2d/core/: renderer.h
src/seen/framework/g2d/core/plugin/: plugin_system.h
src/seen/framework/g2d/core/render_texture/: generate_texture_system.h  render_texture.h
src/seen/framework/g2d/core/system/: system.h  system_manager.h
src/seen/framework/g2d/math/: matrix.h  transform.h
src/seen/framework/g2d/math/shapes/: rectangle.h
src/seen/framework/g2d/runner/: runner.h
src/seen/mod/: drawable.cc  drawable.h  drawable_metrics.h  frame_pacer.cc  frame_pacer.h  gpu.cc  gpu.h  gpu_adapter.cc  gpu_adapter.h  gpu_adapter_info.h  gpu_device.cc  gpu_device.h  gpu_device_descriptor.h  gpu_feature_name.h  gpu_power_preference.h  gpu_supported_limits.h  gpu_texture_format.cc  gpu_texture_format.h  macros.h  object.h  seen.cc  seen.h  seen_controller.h  types.h
src/seen/pal/: pal.h  pal_darwin.mm  pal_macos.mm
src/seen/runtime/: bind.cc  bind.h  converter.h  engine.cc  engine.h  entry.cc  entry.h  eval.cc  eval.h  export.cc  export.h  module.cc  module.h  register.cc  register.h  types.h  utils.h  wasm_ext.cc  wasm_ext.h
src/seen/runtime/binding/: gpu.cc  gpu.h  gpu_adapter.cc  seen.cc  seen.h
src/seen/runtime/bindings/: gpu.cc  gpu.h  gpu_adapter.cc  gpu_adapter.h  seen.cc  seen.h
src/seen/runtime/glue/: gpu.h
src/seen/scene/: node.cc  node.h  scene.cc  scene.h
src/seen/scene/animation/: animation.cc  animation.h  multi_child_animation.cc  multi_child_animation.h  typed_animation.h
src/seen/scene/component/: component.cc  component.h  sprite.cc  sprite.h
